--- a/src/protected/application/plugins/SealModel3/assets/css/model-tab-3.css
+++ b/src/protected/application/plugins/SealModel3/assets/css/model-tab-3.css
@@ -1,34 +1,53 @@
-#certificate-model1 {
+#certificate-model3 {
   width: 1250px;
   background-size: contain;
   background-repeat: no-repeat;
   height: 100%;
-  overflow: auto;
-  margin: auto; }
-  #certificate-model1 p.certificate-content {
-    margin: 160px 126px 0px 190px;
-    padding: 40px 0;
-    font-size: 25px;
-    line-height: 2.2rem; }
-    #certificate-model1 p.certificate-content span.entity-name {
+  overflow: hidden;
+  margin: auto;
+  color: #FFF; }
+  #certificate-model3 img.background {
+    position: absolute;
+    z-index: -1;
+    opacity: 0.95;
+    width: 1250px; }
+  #certificate-model3 p.certificate-content {
+    margin: 200px 55px 0 358px;
+    font-size: 22px;
+    line-height: 2.2rem;
+    text-align: justify;
+    height: 560px; }
+    #certificate-model3 p.certificate-content span.entity-name {
       font-size: 22px;
       font-style: italic; }
-  #certificate-model1 .footer {
-    margin-top: 50px;
-    width: 100%;
-    text-align: right; }
-    #certificate-model1 .footer .footer-signatures {
-      width: auto;
-      min-width: 580px;
-      text-align: center; }
-      #certificate-model1 .footer .footer-signatures div {
+  #certificate-model3 .footer {
+    width: 100%; }
+    #certificate-model3 .footer .entity-url {
+      margin-left: 260px;
+      margin-top: 90px;
+      width: 120px;
+      overflow: visible;
+      font-size: 13px; }
+      #certificate-model3 .footer .entity-url > a {
+        color: #E0E0E0; }
+    #certificate-model3 .footer .footer-signatures {
+      width: 870px;
+      text-align: center;
+      float: right;
+      position: absolute;
+      margin-top: -25px; }
+      #certificate-model3 .footer .footer-signatures div {
         display: inline; }
-    #certificate-model1 .footer div {
+        #certificate-model3 .footer .footer-signatures div.certificate-seal-owner p {
+          margin-bottom: 0px;
+          height: 50px; }
+    #certificate-model3 .footer div {
       position: relative;
-      margin: 10px;
       vertical-align: bottom;
       display: inline-block; }
-    #certificate-model1 .footer div img {
-      height: 80px; }
+    #certificate-model3 .footer div.footer-img {
+      margin: 0 7px; }
+      #certificate-model3 .footer div.footer-img > img {
+        height: 82px; }
 
-/*# sourceMappingURL=model-tab-1.css.map */
+/*# sourceMappingURL=model-tab-3.css.map */
